# Algorithms-visualizer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  algorithm.cpp  config.h  main.cpp
include/: Algorithm.h  Blocks.h  StatusBar.h  config.h
src/: Blocks.cpp  StatusBar.cpp  algorithm.cpp  config.h  configElements.h  main.cpp  render.cpp
